# OpenFace_Wrapper

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindBoost.cmake  FindDlib.cmake  FindOpenBLAS.cmake  FindOpenCV.cmake
exe/FaceLandmarkImg/: FaceLandmarkImg.vcxproj  FaceLandmarkImg.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
exe/FaceLandmarkImg/FaceLandmarkImg.dir/Release/: FaceLandmarkImg.exe.recipe
exe/FaceLandmarkImg/FaceLandmarkImg.dir/Release/FaceLandmarkImg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  FaceLandmarkImg.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
exe/FaceLandmarkVid/: FaceLandmarkVid.vcxproj  FaceLandmarkVid.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
exe/FaceLandmarkVid/FaceLandmarkVid.dir/Release/: FaceLandmarkVid.exe.recipe
exe/FaceLandmarkVid/FaceLandmarkVid.dir/Release/FaceLandmarkVid.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  FaceLandmarkVid.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
exe/FaceLandmarkVidMulti/: FaceLandmarkVidMulti.vcxproj  FaceLandmarkVidMulti.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
exe/FaceLandmarkVidMulti/FaceLandmarkVidMulti.dir/Release/: FaceLandmarkVidMulti.exe.recipe
exe/FaceLandmarkVidMulti/FaceLandmarkVidMulti.dir/Release/FaceLand.31214514.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  FaceLandmarkVidMulti.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
exe/FeatureExtraction/: FeatureExtraction.vcxproj  FeatureExtraction.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
exe/FeatureExtraction/FeatureExtraction.dir/Release/: FeatureExtraction.exe.recipe
exe/FeatureExtraction/FeatureExtraction.dir/Release/FeatureE.919E8788.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  FeatureExtraction.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
exe/FeatureExtraction_stdout/: CMakeLists.txt  FeatureExtraction_stdout.cpp  FeatureExtraction_stdout.vcxproj
lib/cmake/OpenFace/: OpenFaceConfig.cmake  OpenFaceTargets.cmake
lib/local/FaceAnalyser/: CMakeLists.txt  FaceAnalyser.vcxproj  FaceAnalyser.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
lib/local/FaceAnalyser/FaceAnalyser.dir/Release/FaceAnalyser.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  FaceAnalyser.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
lib/local/GazeAnalyser/: CMakeLists.txt  GazeAnalyser.vcxproj  GazeAnalyser.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
lib/local/GazeAnalyser/GazeAnalyser.dir/Release/: GazeAnalyser.lib.recipe
lib/local/GazeAnalyser/GazeAnalyser.dir/Release/GazeAnalyser.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  GazeAnalyser.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
lib/local/LandmarkDetector/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LandmarkDetector.vcxproj  LandmarkDetector.vcxproj.filters  cmake_install.cmake
lib/local/LandmarkDetector/LandmarkDetector.dir/Release/LandmarkDetector.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  LandmarkDetector.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
lib/local/Utilities/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Utilities.vcxproj  Utilities.vcxproj.filters  cmake_install.cmake
lib/local/Utilities/Utilities.dir/Release/Utilities.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Utilities.lastbuildstate
lib/local/Utilities/include/: RecorderOpenFace.h
